import com.github.jengelman.gradle.plugins.shadow.transformers.Log4j2PluginsCacheFileTransformer
import org.gradle.nativeplatform.platform.internal.DefaultNativePlatform

/*
 * This file was generated by the Gradle 'init' task.
 *
 * This generated file contains a sample Java application project to get you started.
 * For more details take a look at the 'Building Java & JVM projects' chapter in the Gradle
 * User Manual available at https://docs.gradle.org/8.1.1/userguide/building_java_projects.html
 */

plugins {
	id 'java'
	// Apply the application plugin to add support for building a CLI application in Java.
	id 'application'
//	id "checkstyle"
	id "jacoco"
	id "com.diffplug.spotless" version "6.23.3"
	id "net.ltgt.errorprone" version "3.1.0"
	id 'com.github.johnrengelman.shadow' version '8.1.1'
	id 'org.owasp.dependencycheck' version '10.0.4'
//    id 'org.unbroken-dome.test-sets' version '4.0.0'
//    id 'maven-publish'
//    id "io.github.gradle-nexus.publish-plugin" version "1.1.0"
//    id 'signing'
}

group 'io.optimism'
version '0.4.5'
repositories {
	// Use Maven Central for resolving dependencies.
	mavenCentral()
	maven {
		url "https://artifacts.consensys.net/public/teku/maven/"
	}
	maven {
		url "https://dl.cloudsmith.io/public/libp2p/jvm-libp2p/maven/"
	}
	maven {
		url "https://hyperledger.jfrog.io/artifactory/besu-maven/"
	}
	maven {
		url "https://artifacts.consensys.net/public/maven/maven/"
	}
	maven { url "https://artifacts.consensys.net/public/maven/maven/" }
	maven { url "https://jitpack.io" }
	google()
}


tasks.withType(JavaCompile).configureEach {
	options.annotationProcessorPath = configurations.annotationProcessor
	options.compilerArgs += "--enable-preview"
	options.compilerArgs += "-Xlint:preview"
//	options.compilerArgs += ["--add-modules", "jdk.incubator.concurrent"]
	options.compilerArgs += ["-Aproject=${project.group}/${project.name}"]
}

tasks.withType(Test).configureEach {
	jvmArgs += "--enable-preview"
//	jvmArgs += ["--add-modules", "jdk.incubator.concurrent"]
}

tasks.withType(JavaExec).configureEach {
	jvmArgs += "--enable-preview"
//	jvmArgs += ["--add-modules", "jdk.incubator.concurrent"]
}

def brotliVersion = "1.16.0"
def operatingSystem = DefaultNativePlatform.getCurrentOperatingSystem()
def currentArchitecture = DefaultNativePlatform.getCurrentArchitecture()

dependencies {
	// This dependency is used by the application.
	implementation 'com.google.guava:guava:33.0.0-jre'
	implementation 'com.github.rholder:guava-retrying:2.0.0'

	// define any required OkHttp artifacts without version
	implementation("com.squareup.okhttp3:okhttp:5.0.0-alpha.14")
	implementation("com.squareup.okhttp3:logging-interceptor:5.0.0-alpha.14")

	implementation('net.osslabz.evm:evm-abi-decoder:0.0.6')
	implementation 'com.github.gestalt-config:gestalt-core:0.29.0'
	implementation 'com.github.gestalt-config:gestalt-toml:0.29.0'

	implementation 'com.fasterxml.jackson:jackson-bom:2.15.2'
	implementation 'com.fasterxml.jackson.core:jackson-core'
//	implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jdk8'
	implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-toml'
	implementation 'org.jctools:jctools-core:4.0.1'

	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
	implementation 'io.jsonwebtoken:jjwt-impl:0.11.5'
	implementation 'io.jsonwebtoken:jjwt-jackson:0.11.5'

	//jsonrpc
	implementation('io.vertx:vertx-auth-jwt:4.5.3') {
		exclude group: 'io.netty', module: 'netty-codec-http'
	}
	implementation('io.vertx:vertx-core:4.5.3')
	implementation('io.vertx:vertx-web:4.5.3')
	implementation('io.netty:netty-all:4.1.108.Final')

	implementation 'io.micrometer:micrometer-registry-prometheus:1.11.0'
	implementation platform('io.micrometer:micrometer-tracing-bom:1.1.1')
	implementation 'io.micrometer:micrometer-tracing'
	implementation 'io.micrometer:micrometer-tracing-bridge-otel'

	// Logback
	implementation 'ch.qos.logback:logback-core:1.4.12'
	implementation 'ch.qos.logback:logback-classic:1.4.14'
	implementation 'org.slf4j:slf4j-api:2.0.7'

	implementation platform("io.opentelemetry:opentelemetry-bom-alpha:1.26.0-alpha")
	// OpenTelemetry core
	implementation(platform("io.opentelemetry:opentelemetry-bom:1.26.0"))
	implementation 'io.opentelemetry:opentelemetry-api'
	implementation 'io.opentelemetry:opentelemetry-sdk'
	implementation 'io.opentelemetry:opentelemetry-sdk-logs'

	// OpenTelemetry log4j appenders
	implementation platform("io.opentelemetry.instrumentation:opentelemetry-instrumentation-bom-alpha:1.26.0-alpha")
	runtimeOnly 'io.opentelemetry.instrumentation:opentelemetry-logback-mdc-1.0'


	implementation 'info.picocli:picocli:4.7.3'
	annotationProcessor 'info.picocli:picocli-codegen:4.7.3'

	errorprone("com.google.errorprone:error_prone_core:2.18.0")

//	implementation 'io.tmio:tuweni-devp2p:2.4.2'
	implementation 'io.tmio:tuweni-ssz:2.4.2'
	implementation('tech.pegasys.teku.internal:p2p:23.10.0') {
		exclude group: 'org.bouncycastle', module: 'bcprov-jdk15on'
	}
	implementation('tech.pegasys.teku.internal:metrics:23.10.0')
	implementation('tech.pegasys.teku.internal:async:23.10.0')
	implementation('tech.pegasys.teku.internal:storage:23.10.0')
	implementation('tech.pegasys.teku.internal:time:23.10.0')
	implementation('tech.pegasys.teku.internal:spec:23.10.0')
	implementation('tech.pegasys.teku.internal:serviceutils:23.10.0')
	implementation('tech.pegasys.teku.internal:unsigned:23.10.0')
	implementation('tech.pegasys.teku.internal:statetransition:23.10.0')
	implementation 'tech.pegasys:jc-kzg-4844:0.8.0'
	implementation('org.hyperledger.besu.internal:metrics-core:23.10.2') {
		exclude group: 'org.bouncycastle', module: 'bcprov-jdk15on'
	}
	implementation('org.hyperledger.besu:plugin-api:23.10.2')
	implementation('io.libp2p:jvm-libp2p:1.0.1-RELEASE') {
		exclude group: 'org.bouncycastle', module: 'bcprov-jdk15on'
	}
	implementation 'io.tmio:tuweni-units:2.4.2'
	implementation('io.tmio:tuweni-crypto:2.4.2'){
		exclude group: 'org.bouncycastle', module: 'bcprov-jdk15on'
	}

	implementation('org.hyperledger.besu.internal:core:23.10.2')
	implementation('org.hyperledger.besu.internal:algorithms:23.10.2')
	implementation('org.hyperledger.besu.internal:rlp:23.10.2')
	implementation('org.hyperledger.besu:besu-datatypes:23.10.2')

	implementation 'io.tmio:tuweni-rlp:2.4.2'
	implementation('tech.pegasys.discovery:discovery:22.12.0') {
		exclude group: 'org.bouncycastle', module: 'bcprov-jdk15on'
	}
	implementation 'org.xerial.snappy:snappy-java:1.1.10.5'

	implementation 'org.apache.logging.log4j:log4j-api:3.0.0-alpha1'
//	implementation 'org.apache.logging.log4j:log4j-core:3.0.0-alpha1'
//	implementation 'org.apache.logging.log4j:log4j-slf4j-impl:3.0.0-alpha1'
//	implementation 'org.apache.logging.log4j:log4j-slf4j2-impl:3.0.0-alpha1'
	implementation 'org.apache.logging.log4j:log4j-to-slf4j:3.0.0-alpha1'

	implementation('org.web3j:core:4.11.2') {
		exclude group: 'org.bouncycastle', module: 'bcprov-jdk15on'
		exclude group: 'com.squareup.okhttp3', module: 'okhttp'
		exclude group: 'com.squareup.okhttp3', module: 'logging-interceptor'
	}

	implementation "com.aayushatharva.brotli4j:brotli4j:$brotliVersion"
	runtimeOnly("""com.aayushatharva.brotli4j:native-${
		if (operatingSystem.isWindows())
			if (currentArchitecture.isAmd64()) "windows-x86_64"
			else if (currentArchitecture.isArm()) "windows-aarch64"
			else
				throw new IllegalStateException("Unsupported architecture: ${currentArchitecture.getName()}");
		else if (operatingSystem.isMacOsX())
			if (currentArchitecture.isArm()) "osx-aarch64"
			else "osx-x86_64"
		else if (operatingSystem.isLinux())
			if (currentArchitecture.isArm()) "linux-aarch64"
			else if (currentArchitecture.isAmd64()) "linux-x86_64"
			else
				throw new IllegalStateException("Unsupported architecture: ${currentArchitecture.getName()}");
		else
			throw new IllegalStateException("Unsupported operating system: $operatingSystem");
	}:$brotliVersion""")

	// Use JUnit Jupiter for testing.
	testImplementation 'org.junit.jupiter:junit-jupiter:5.9.1'
	testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.0'
	// https://mvnrepository.com/artifact/org.junit.platform/junit-platform-suite-api
	testImplementation 'org.junit.platform:junit-platform-suite-api:1.9.1'
	// https://mvnrepository.com/artifact/org.junit.platform/junit-platform-suite-engine
	testRuntimeOnly 'org.junit.platform:junit-platform-suite-engine:1.9.1'

	testRuntimeOnly 'org.junit.platform:junit-platform-reporting:1.9.1'

	testImplementation 'org.mockito:mockito-junit-jupiter:2.19.0'
	testImplementation("com.squareup.okhttp3:mockwebserver:5.0.0-alpha.14")
}

dependencyCheck {
	format = 'HTML'
	outputDirectory = 'build/reports/dependency-check-report' // Change to match expected location
}

// Apply a specific Java toolchain to ease working on different environments.
java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
//		vendor = JvmVendorSpec.GRAAL_VM
//		implementation = JvmImplementation.VENDOR_SPECIFIC
	}
}

application {
	// Define the main class for the application.
	mainClass = 'io.optimism.Hildr'
}

test {
	useJUnitPlatform()
	testLogging {
		events "passed", "skipped", "failed"
	}
	finalizedBy jacocoTestReport
}

jacoco {
	toolVersion = "0.8.12"
}

jacocoTestReport {
	dependsOn test

	reports {
		csv.required = true
	}
}

jacocoTestCoverageVerification {

	violationRules {
		rule {
			limit {
				minimum = 0.2
			}
		}
	}
}

//checkstyle {
//	toolVersion = '10.10.0'
//	// default checkstyle config -- specific to your team agreement
//	configFile = project(":").file("config/checkstyle/google_checks.xml")
//	// Google style (idiosyncratic to Google):
//	// configFile = project(":").file("config/checkstyle/google_checks.xml")
//	// SUN style (closest to modern Java styles) -- the basis for this project:
//	// configFile = project(":").file("config/checkstyle/sun_checks.xml")
////	ignoreFailures = false
////	maxWarnings = 0
//}

spotless {
	// optional: limit format enforcement to just the files changed by this feature branch
//    ratchetFrom 'origin/main'

	format 'misc', {
		// define the files to apply `misc` to
		target '*.gradle', '*.md', '.gitignore'

		// define the steps to apply to those files
		trimTrailingWhitespace()
		indentWithTabs() // or spaces. Takes an integer argument if you don't like 4
		endWithNewline()
	}
	java {
		// Use the default importOrder configuration

		// don't need to set target, it is inferred from java

		palantirJavaFormat('2.38.0')
		// fix formatting of type annotations
		formatAnnotations()

		importOrder()

		removeUnusedImports()
	}
}

//checkstyleMain
//		.exclude('io/optimism/rpc/handler/TimeoutHandler.java')
//		.exclude('io/optimism/rpc/handler/JsonRpcExecutorHandler.java')
//		.exclude('io/optimism/rpc/handler/JsonRpcParseHandler.java')
//		.exclude('io/optimism/rpc/methods/JsonRpcMethod.java')
//		.exclude('io/optimism/rpc/methods/JsonRpcMethodsFactory.java')
//		.exclude('io/optimism/rpc/methods/JsonRpcProcessor.java')
//		.exclude('io/optimism/rpc/execution/LoggedJsonRpcProcessor.java')
//		.exclude('io/optimism/rpc/internal/JsonRpcRequest.java')
//		.exclude('io/optimism/rpc/internal/JsonRpcRequestContext.java')
//		.exclude('io/optimism/rpc/internal/JsonRpcRequestId.java')
//		.exclude('io/optimism/rpc/internal/response/JsonRpcResponse.java')
//		.exclude('io/optimism/rpc/internal/response/JsonRpcErrorResponse.java')
//		.exclude('io/optimism/rpc/internal/response/JsonRpcError.java')
//		.exclude('io/optimism/rpc/internal/response/JsonRpcResponseType.java')
//		.exclude('io/optimism/rpc/internal/response/JsonRpcSuccessResponse.java')
//		.exclude('io/optimism/rpc/internal/response/JsonRpcNoResponse.java')
//		.exclude('io/optimism/rpc/execution/BaseJsonRpcProcessor.java')
//		.exclude('io/optimism/rpc/execution/JsonRpcProcessor.java')
//testSets {
//    integrationTest
//}

tasks.named('test') {
	// Use JUnit Platform for unit tests.
	useJUnitPlatform()
}

check {
	dependsOn += jacocoTestCoverageVerification
//	dependsOn += integrationTest
}

tasks.withType(Test).configureEach {
	def outputDir = reports.junitXml.outputLocation
	jvmArgumentProviders << ({
		[
				"-Djunit.platform.reporting.open.xml.enabled=true",
				"-Djunit.platform.reporting.output.dir=${outputDir.get().asFile.absolutePath}",
				"--enable-preview"
		]
	} as CommandLineArgumentProvider)
}

java {
	withJavadocJar()
	withSourcesJar()
}


javadoc {
	if (JavaVersion.current().isJava9Compatible()) {
		options.addBooleanOption('html5', true)
	}
	options.addBooleanOption('-enable-preview', true)
	options.addStringOption('-release', '21')
//	options.addStringOption('-add-modules', 'jdk.incubator.concurrent')
}

jar {
	enabled = false
	manifest {
		attributes "Main-Class": "io.optimism.Hildr"
		attributes "Multi-Release": "true"
	}
	dependsOn(shadowJar)
}

shadowJar {
	archiveFileName = "${project.name}-${project.version}.jar"
	transform(Log4j2PluginsCacheFileTransformer)
}

task buildJarForDocker {
	dependsOn jar
	def buildImageDir = "build/docker"
	def out = new ByteArrayOutputStream()
	doFirst {
		new File(buildImageDir).mkdirs()
		copy {
			from "build/libs/${project.name}-${project.version}.jar"
			into buildImageDir
			rename "${project.name}-${project.version}.jar", "${project.name}.jar"
		}
	}
	println(out.toString())
}
